Iter 500000 lr .000001 Any other combo either produced nans, moved too slowly, or took too long.

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -2,9 +2,14 @@
 
 export("%>%")
 export(find_best_lambda)
+export(gramsch)
+export(mlr_gd)
+export(mlr_qr)
 export(multiple_linear_regression)
 export(predict_from_coefs)
+export(proj)
 export(ridge_regression)
 export(simple_linear_regression)
+export(slr_gd)
 import(dplyr)
 importFrom(magrittr,"%>%")
